--- a/frappe/public/scss/login.bundle.scss
+++ b/frappe/public/scss/login.bundle.scss
@@ -1,8 +1,18 @@
 @import "./desk/variables";
+@import "./common/logintest.bundle.css";
 
 body {
+	background: url("https://ibs-erp.blr1.cdn.digitaloceanspaces.com/5040007.jpg");
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+
 	@include media-breakpoint-up(sm) {
-		background-color: var(--bg-light-gray);
+		background: url("https://ibs-erp.blr1.cdn.digitaloceanspaces.com/5040007.jpg");
+		background-size: cover;
+		// background-color: var(--bg-light-gray);
+		background-position: center;
+		background-repeat: no-repeat;
 	}
 	.page-content-wrapper {
 		min-height: calc(100vh - 220px);
@@ -25,13 +35,15 @@ body {
 .for-signup,
 .for-email-login {
 	.page-card {
+		width: 100%;
 		padding: 45px 10px;
-		background-color: #fff;
 		max-width: 400px;
-		margin: 0 auto;
 		border-radius: var(--border-radius-md);
 		border: 1px solid var(--border-color);
-
+		background: rgba(255, 255, 255, 0.2);
+		box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+		backdrop-filter: blur(5px);
+		-webkit-backdrop-filter: blur(5px);
 		form {
 			max-width: 320px;
 			margin: 0 auto;
@@ -59,8 +71,11 @@ body {
 				border: none;
 				color: var(--text-color);
 				@include get_textstyle("base", "regular");
-				background-color: var(--control-bg);
+				// background-color: gray;
+				
 				margin-bottom: 1rem;
+				outline: none;
+				font-style: italic;
 			}
 
 			&.invalid {
@@ -76,7 +91,8 @@ body {
 			}
 
 			.forgot-password-message {
-				text-align: right;
+				// text-align: right;'
+				// text-transform: uppercase;
 				line-height: 1;
 
 				> * {
@@ -201,7 +217,7 @@ body {
 
 .page-card-head {
 	padding: max(5vh, 30px) 0 14px 0px;
-	margin: 0 auto;
+	// margin: 0 auto;
 	text-align: center;
 	font-size: var(--text-xl);
 	font-weight: 600;
@@ -217,4 +233,83 @@ body {
 		letter-spacing: 0.01em;
 		color: var(--text-color);
 	}
+}
+
+.new-login-card{
+	margin-top: 40px;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.content-bar {
+	width: 35rem;
+	// color: #ddd;
+	padding: 35px;
+	background: rgba(255, 255, 255, 0.2);
+	border-radius: 10px;
+	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+	backdrop-filter: blur(5px);
+	-webkit-backdrop-filter: blur(5px);
+	border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.text-head {
+	text-align: center;
+	font-size: 20px;
+	font-weight: bold;
+	text-transform: capitalize;
+}
+.text-head .textblue{
+	font-size: 500;
+	color: blue !important; 
+}
+.text-head .textindigo{
+	font-size: 500;
+	color: indigo;
+}
+.font-mono{
+	text-align: center;
+	font-family: ui-monospace;
+	color: #000;
+}
+.text-cyan{
+	color: rgb(6, 88, 88);
+	font-weight: 900;
+	font-weight: bold;
+}
+@media (max-width: 576px) {
+	.content-bar{
+		display: none;
+	}
+}
+
+@media (max-width: 375px) {
+	.content-bar{
+		display: none;
+	}
+}
+.login-button{
+  width: 100%; 
+  transform: translateZ(0); 
+  padding-top: 0.5rem; 
+  padding-bottom: 0.5rem; 
+  font-weight: bold; 
+  transition: all 300ms; 
+  background-color: #3b82f6; 
+}
+
+.login-button:hover {
+	box-shadow: 0 10px 15px -3px rgba(59, 130, 246, 0.5), 
+				0 4px 6px -2px rgba(59, 130, 246, 0.5); 
+}
+
+.login-text {
+	text-align: center;
+	font-size: 2.25rem; /* 36px */
+	line-height: 2.5rem; /* 40px */
+	font-weight: 500;
+	color: #3b82f6;
+	margin-bottom: 35px;
 }
